syntax = "proto3";
package rpcpb;
import "github.com/dappley/go-dappley/network/pb/peerlist.proto";

option objc_class_prefix = "HLW";

service RpcService {
  rpc RpcCreateWallet (CreateWalletRequest) returns (CreateWalletResponse) {}
  rpc RpcGetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc RpcSend (SendRequest) returns (SendResponse) {}
  rpc RpcGetPeerInfo (GetPeerInfoRequest) returns (GetPeerInfoResponse) {}
  rpc RpcGetBlockchainInfo (GetBlockchainInfoRequest) returns (GetBlockchainInfoResponse) {}
}

service AdminService{
  rpc RpcAddPeer(AddPeerRequest) returns (AddPeerResponse) {}
}

// The request message 
message CreateWalletRequest {
  string name = 1;
  string passphrase = 2;
}

message GetBalanceRequest {
  string name = 1;
  string address = 2;
}

message SendRequest {
  string from = 1;
  string to = 2;
  bytes amount = 3;
}

message GetPeerInfoRequest {}

message GetBlockchainInfoRequest {}

message AddPeerRequest {
  string fullAddress = 1;
}

// The response message 

message CreateWalletResponse {
  string message = 1;
  string address = 2;
}

message GetBalanceResponse {
  string message = 1;
  int64 amount = 2;
}

message SendResponse {
  string message = 1;
}

message GetPeerInfoResponse {
  networkpb.Peerlist peerList = 1;
}

message GetBlockchainInfoResponse {
  bytes   tailBlockHash = 1;
  uint64  blockHeight = 2;
}

message AddPeerResponse {
  string status = 1;
}
